on-prem/k8s-lab/service/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: LoadBalancer
  selector:
    app: nginx-app
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30000
