on-prem/k8s-lab/service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  labels:
    name: ingress-controller-app
spec:
  rules:
  - host: demo.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: http-test-svc
            port: 
              number: 80
